# Langraph-agent-study

./: .env.example  .gitignore  AGENTS.md  README.md  mcp_servers.json  pyproject.toml  react_agent.py
langraph_agent/: __init__.py  checkpoints.py  cli.py  config.py  context.py  feishu_approvals.py  feishu_bot.py  graph.py  llm.py  models.py  plan_tools.py  prompt.py  tool_guard.py
langraph_agent/skills/: __init__.py  registry.py
langraph_agent/tools/: __init__.py  basic.py  filesystem.py  mcp.py  planning.py  shell.py  skill_tools.py  web_search.py
prompts/: plan.txt  react.txt  summary.txt
skills/langgraph-react-tutor/: SKILL.md
skills/langgraph-react-tutor/agents/: openai.yaml
skills/python-debug-helper/: SKILL.md
skills/python-debug-helper/agents/: openai.yaml
skills/python-debug-helper/scripts/: environment_report.py
snake-game/: README.md  run_game.py  snake_game.py  snake_game_enhanced.py
tests/: test_basic_tools.py  test_checkpoints.py  test_cli.py  test_context.py  test_feishu_approvals.py  test_feishu_bot.py  test_filesystem_tools.py  test_graph_streaming.py  test_llm.py  test_mcp_tools.py  test_plan_mode.py  test_plan_mode_recovery.py  test_prompt.py  test_shell_tool.py  test_skill_registry.py  test_tool_guard.py  test_web_search.py
