[project]
name = "langraph-agent"
version = "0.1.0"
description = "A minimal LangGraph ReAct agent demo using an OpenAI-compatible model endpoint."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
react-agent = "langraph_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["langraph_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
