[project]
name = "langraph-agent"
version = "0.1.0"
description = "A minimal LangGraph ReAct agent demo using an OpenAI-compatible model endpoint."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.2.18",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.3",
    "deepagents>=0.6.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.0",
    "httpx>=0.27.0",
    "lark-oapi>=1.6.6",
    "langchain-mcp-adapters>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
react-agent = "langraph_agent.cli:main"
feishu-agent = "langraph_agent.feishu_bot:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["langraph_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
